# newsletter-rs

./: .gitignore  Cargo.toml  config.cfg  cookie
migration/: init.sql
res/app/: app.html  login.html
res/public/: embed.js
src/: args.rs  main.rs  routes.rs  telemetry.rs
src/config/: config.rs
src/handlers/: app.rs  auth.rs  contact_lists.rs  mod.rs  newsletters.rs
src/helpers/: auth.rs  email.rs  mod.rs  response.rs
src/models/: contact.rs  contact_lists.rs  mod.rs  newsletters.rs  types.rs
telemetry/: docker-compose.yml  tempo-config.yaml
templates/: base.html
templates/newsletters/: list.html  new.html
