[package]
name = "newsletter-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
bcrypt = "0.17.0"
chrono = "0.4.39"
clap = { version = "4.5.31", features = ["derive"] }
jsonwebtoken = "9.3.1"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"] }
time = "0.3.37"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
uuid = { version = "1.14.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
